--- a/conf/example_switch2.yml
+++ b/conf/example_switch2.yml
@@ -1,55 +1,47 @@
 # example:
-# - two buttons (switches) with 20s delay
-# - the light works during the activity of at least one button
+# - two switches with 20s delay
+# - the light works during the activity of at least one switch
 #
 # you can control the switch by curl (rest api):
-#   curl http://localhost:9128/api/metric/button1 -d "switch_state=on" -X PUT    
+#   curl http://localhost:9128/api/sensor/switch1 -d "switch_state=on" -X PUT    
+#   curl http://localhost:9128/api/sensor/switch1 -d "switch_state=off" -X PUT    
 #
-# look at the result and refresh page (Firefox recommended for json response):
-#   http://localhost:9128/api/metrics/by_node
+# look at the result (Firefox recommended for json response):
+#   http://localhost:9128/api/sensors/by_node
+#
+# or watch live Socket.IO log:
+#   http://localhost:9128
+
 
 virtual:
-    button1:
-        addr: "1"
+    switch1:
         sensors:
-            switch_state: switch
+            switch_state:
+                type: switch
 
-        # default value after system start
-        default:
-            switch_state: off
+                # after ttl expires, returns the switch to its default state
+                ttl: 20
 
-        # after ttl expires, returns the switch to its default state
-        ttl: 20
-
-        # if refresh is set to true:
-        #  - after pressing the switch again in the same state, ttl will be reset 
-        # if refresh is not set:
-        #  - during a delay the next push is ignored
-        refresh: true
-
-
-    button2:
-        addr: "2"
+                # if accept_refresh is set to true:
+                #  - if the switch will be set again in "on" state, ttl countdown starts again
+                # if accept_refresh is not set:
+                #  - during a delay the next hit is ignored
+                accept_refresh: true
+    switch2:
         sensors:
-            switch_state: switch
-        default:
-            switch_state: off
-        ttl: 20
-        refresh: true
-
+            switch_state:
+                type: switch
+                ttl: 20
+                accept_refresh: true
     light:
-        addr: "3"
         actuators:
-            relay_state: switch
-        default:
-            switch_state: off
+            relay_state:
+                type: switch
 
-        #monitors the activity of other sensors
-        watch:
-            - button1
-            - button2
+                # this sensor monitors state of other sensors
+                eval_require:
+                    sw1: { switch1: { switch_state : value }}
+                    sw2: { switch2: { switch_state : value }}
 
-        # the following metric will be calculated
-        eval:
-            relay_state: "button1['switch_state'] or button2['switch_state']"
-    
+                # value will be calculated
+                eval_expr: "sw1 or sw2"
