--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-recursive-include switchboard/templates *
-recursive-include switchboard/static *
+recursive-include laporte/templates *
+recursive-include laporte/static *
