--- a/conf/example_weatherstation.yml
+++ b/conf/example_weatherstation.yml
@@ -30,7 +30,8 @@ virtual:
                 #     then continue eval dew_celsius, hum_grams
                 # if dataset would not be set:
                 #   - eval would be done twice
-                dataset: true
+                debounce:
+                    dataset: true
 
                 # metric will be corrected (slope +1% and shift + 0.5)
                 eval_expr: 'value * 1.01 + 0.5'
@@ -38,7 +39,8 @@ virtual:
             hum_ratio:
                 type: gauge
                 ttl: 600
-                dataset: true
+                debounce:
+                    dataset: true
 
                 # percents should be stored as 0.0-1.0 (ratio)
                 # uncomment next line if sensor sends 1-100%
