--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ max-locals=25
 max-branches=30
 min-public-methods=1
 max-public-methods=20
+max-statements=60
 
 [pylint.refactoring]
 max-nested-blocks=10
