Refactor log messages

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ max-branches=30
 min-public-methods=1
 max-public-methods=20
 max-statements=60
+max-returns=8
 
 [pylint.refactoring]
 max-nested-blocks=10
